--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,6 +7,7 @@ edition = "2021"
 
 [dependencies]
 tracing = "0.1.35"
-tracing-subscriber = "0.3.15"
 lazy_static = "1.4.0"
-regex = "1.6.0"
+
+[dev-dependencies]
+tracing-subscriber = "0.3.15"
