--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,7 +7,7 @@ edition = "2021"
 
 [dependencies]
 tracing = "0.1.35"
-lazy_static = "1.4.0"
+once_cell = "1.13.0"
 
 [dev-dependencies]
 tracing-subscriber = "0.3.15"
