--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "logid"
-version = "0.3.0"
+version = "0.4.0"
 edition = "2021"
 description = "Rust logging framework using IDs to identify log entries."
 repository = "https://github.com/mhatzl/logid"
@@ -17,6 +17,7 @@ once_cell = "1.13.0"
 
 [features]
 diagnostics = []
+causes = []
 
 [dev-dependencies]
 tracing-subscriber = "0.3.15"
