--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,6 +15,7 @@ readme = "README.md"
 tracing = "0.1.35"
 once_cell = "1.13.0"
 chrono = "0.4.22"
+dashmap = "5.4.0"
 
 [features]
 diagnostics = []
