feat!: use pub/sub to distribute log events

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,14 +12,15 @@ readme = "README.md"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-tracing = "0.1.35"
-once_cell = "1.13.0"
-chrono = "0.4.22"
+tracing = "0.1"
+once_cell = "1.13"
+chrono = "0.4"
+crossbeam-channel = "0.5"
 
 [features]
 diagnostics = []
 causes = []
 
 [dev-dependencies]
-tracing-subscriber = "0.3.15"
-rayon = "1.7.0"
+tracing-subscriber = "0.3"
+rayon = "1.7"
