--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,7 +15,9 @@ readme = "README.md"
 tracing = "0.1"
 once_cell = "1.13"
 chrono = "0.4"
-crossbeam-channel = "0.5"
+tokio = { version = "1.28", features = ["sync"] }
+tokio-stream = { version = "0.1", features = ["sync"] }
+futures = { version = "0.3", features = ["executor"] }
 
 [features]
 diagnostics = []
