--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,9 +15,10 @@ readme = "README.md"
 tracing = "0.1"
 once_cell = "1.13"
 chrono = "0.4"
+lsp-types = { version = "0.94", optional = true }
 
 [features]
-diagnostics = []
+diagnostics = ["lsp-types"]
 causes = []
 
 [dev-dependencies]
