--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,10 +16,12 @@ tracing = "0.1"
 once_cell = "1.13"
 chrono = "0.4"
 lsp-types = { version = "0.94", optional = true }
+serde_json = { version = "1.0", optional = true }
 
 [features]
 diagnostics = ["lsp-types"]
 causes = []
+payloads = ["serde_json"]
 
 [dev-dependencies]
 tracing-subscriber = "0.3"
