--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -17,7 +17,7 @@ jobs:
     steps:
     - uses: actions/checkout@v2
     - name: Build
-      run: cargo build --verbose
+      run: cargo build --verbose --all-features
   
   test:
     name: Run Tests
@@ -36,7 +36,7 @@ jobs:
     steps:
     - uses: actions/checkout@v2
     - name: Run linter
-      run: cargo clippy -- -D warnings
+      run: cargo clippy --all-features -- -D warnings
 
   format:
     name: Check Formatting
