--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,9 +12,9 @@ readme = "README.md"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-tracing = "0.1"
 once_cell = "1.13"
 chrono = "0.4"
+tracing = { version = "0.1", optional = true }
 lsp-types = { version = "0.94", optional = true }
 serde_json = { version = "1.0", optional = true }
 
@@ -22,6 +22,7 @@ serde_json = { version = "1.0", optional = true }
 diagnostics = ["lsp-types"]
 causes = []
 payloads = ["serde_json"]
+spans = ["tracing"]
 
 [dev-dependencies]
 tracing-subscriber = "0.3"
