--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -17,7 +17,7 @@ jobs:
     steps:
     - uses: actions/checkout@v2
     - name: Build
-      run: cargo build --verbose
+      run: cargo build --verbose --all-features
   
   test:
     name: Run Tests
@@ -26,7 +26,8 @@ jobs:
     steps:
     - uses: actions/checkout@v2
     - name: Run tests
-      run: cargo test --verbose --all-features
+      # Sequential testing required since all log entries are stored in one central hashmap
+      run: cargo test --verbose --all-features -- --test-threads 1
       
   lint:
     name: Run Linter (clippy)
@@ -35,7 +36,7 @@ jobs:
     steps:
     - uses: actions/checkout@v2
     - name: Run linter
-      run: cargo clippy -- -D warnings
+      run: cargo clippy --all-features -- -D warnings
 
   format:
     name: Check Formatting
