--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -10,25 +10,6 @@ env:
   CARGO_TERM_COLOR: always
 
 jobs:
-  build:
-    name: Run Build
-    runs-on: ubuntu-latest
-
-    steps:
-    - uses: actions/checkout@v2
-    - name: Build
-      run: cargo build --verbose --all-features
-  
-  test:
-    name: Run Tests
-    runs-on: ubuntu-latest
-    
-    steps:
-    - uses: actions/checkout@v2
-    - name: Run tests
-      # Sequential testing required since all log entries are stored in one central hashmap
-      run: cargo test --verbose --all-features -- --test-threads 1
-      
   lint:
     name: Run Linter (clippy)
     runs-on: ubuntu-latest
@@ -46,3 +27,34 @@ jobs:
     - uses: actions/checkout@v2
     - name: Run cargo fmt
       run: cargo fmt -- --check
+
+  build:
+    name: Run Build
+    runs-on: ubuntu-latest
+    need: format
+
+    steps:
+    - uses: actions/checkout@v2
+    - name: Build
+      run: cargo build --verbose
+
+  build-all:
+    name: Run Build with all features
+    runs-on: ubuntu-latest
+    need: build
+
+    steps:
+    - uses: actions/checkout@v2
+    - name: Build
+      run: cargo build --verbose --all-features
+
+  test:
+    name: Run Tests
+    runs-on: ubuntu-latest
+    need: build-all
+    
+    steps:
+    - uses: actions/checkout@v2
+    - name: Run tests
+      # Sequential testing required since all log entries are stored in one central hashmap
+      run: cargo test --verbose --all-features -- --test-threads 1
