--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -10,15 +10,6 @@ env:
   CARGO_TERM_COLOR: always
 
 jobs:
-  lint:
-    name: Run Linter (clippy)
-    runs-on: ubuntu-latest
-    
-    steps:
-    - uses: actions/checkout@v2
-    - name: Run linter
-      run: cargo clippy --all-features -- -D warnings
-
   format:
     name: Check Formatting
     runs-on: ubuntu-latest
@@ -28,10 +19,20 @@ jobs:
     - name: Run cargo fmt
       run: cargo fmt -- --check
 
+  lint:
+    name: Run Linter (clippy)
+    runs-on: ubuntu-latest
+    needs: format
+    
+    steps:
+    - uses: actions/checkout@v2
+    - name: Run linter
+      run: cargo clippy --all-features -- -D warnings
+
   build:
     name: Run Build
     runs-on: ubuntu-latest
-    needs: format
+    needs: lint
 
     steps:
     - uses: actions/checkout@v2
