--- a/core/Cargo.toml
+++ b/core/Cargo.toml
@@ -12,8 +12,9 @@ categories = ["development-tools::debugging"]
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+evident = "0.3"
 once_cell = "1.13"
-chrono = "0.4"
+uuid = { version = "1.3", features = ["v4", "fast-rng", "macro-diagnostics"] }
 tracing = { version = "0.1", optional = true }
 lsp-types = { version = "0.94", optional = true }
 serde_json = { version = "1.0", optional = true }
@@ -27,3 +28,4 @@ spans = ["tracing"]
 [dev-dependencies]
 tracing-subscriber = "0.3"
 rayon = "1.7"
+logid-derive = { path = "../derive", version = "0.7" }
