--- a/core/Cargo.toml
+++ b/core/Cargo.toml
@@ -12,9 +12,7 @@ categories = ["development-tools::debugging"]
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-evident = "0.4"
-once_cell = "1.13"
-uuid = { version = "1.3", features = ["v4", "fast-rng", "macro-diagnostics"] }
+evident = { path = "../../evident", version = "0.4" }
 tracing = { version = "0.1", optional = true }
 lsp-types = { version = "0.94", optional = true }
 serde_json = { version = "1.0", optional = true }
