--- a/derive/Cargo.toml
+++ b/derive/Cargo.toml
@@ -16,6 +16,7 @@ proc-macro = true
 logid = { path = "../core", version = "0.7" }
 syn = { version = "2.0", features = ["derive"] }
 quote = "1.0"
+proc-macro2 = "1.0"
 serde_json = { version = "1.0", optional = true }
 
 [features]
