--- a/derive/Cargo.toml
+++ b/derive/Cargo.toml
@@ -17,10 +17,12 @@ logid = { path = "../core", version = "0.7" }
 syn = { version = "2.0", features = ["derive"] }
 quote = "1.0"
 proc-macro2 = "1.0"
-serde_json = { version = "1.0", optional = true }
 
 [features]
-payloads = ["serde_json"]
+diagnostics = []
+payloads = []
 
 [dev-dependencies]
 serde = { version = "1.0", features = ["derive"] }
+serde_json = "1.0"
+thiserror = "1.0"
