--- a/derive/Cargo.toml
+++ b/derive/Cargo.toml
@@ -19,8 +19,8 @@ quote = "1.0"
 proc-macro2 = "1.0"
 
 [features]
-diagnostics = []
-payloads = []
+diagnostics = ["logid/diagnostics"]
+payloads = ["logid/payloads"]
 
 [dev-dependencies]
 serde = { version = "1.0", features = ["derive"] }
