--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,10 +2,11 @@
 members = [
   "core",
   "derive",
+  "logid",
 ]
 
 [workspace.package]
-version = "0.7.1"
+version = "0.8.0"
 edition = "2021"
 description = "Rust logging framework using IDs to identify log entries."
 repository = "https://github.com/mhatzl/logid"
