--- a/derive/Cargo.toml
+++ b/derive/Cargo.toml
@@ -13,16 +13,7 @@ readme.workspace = true
 proc-macro = true
 
 [dependencies]
-logid = { path = "../core", version = "0.7" }
+logid-core = { path = "../core", version = "0.8" }
 syn = { version = "2.0", features = ["derive"] }
 quote = "1.0"
 proc-macro2 = "1.0"
-
-[features]
-diagnostics = ["logid/diagnostics"]
-payloads = ["logid/payloads"]
-
-[dev-dependencies]
-serde = { version = "1.0", features = ["derive"] }
-serde_json = "1.0"
-thiserror = "1.0"
