--- a/core/Cargo.toml
+++ b/core/Cargo.toml
@@ -17,3 +17,4 @@ serde_json = { version = "1.0", optional = true }
 [features]
 diagnostics = ["lsp-types"]
 payloads = ["serde_json"]
+test_filter = []
