--- a/logid/Cargo.toml
+++ b/logid/Cargo.toml
@@ -23,3 +23,4 @@ payloads = ["logid-core/payloads"]
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 thiserror = "1.0"
+logid-core = { path = "../core", version = "0", features = ["test_filter"] }
