--- a/core/Cargo.toml
+++ b/core/Cargo.toml
@@ -10,10 +10,11 @@ readme.workspace = true
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-evident = "0.6"
+evident = { version = "0.9" }
 lsp-types = { version = "0.94", optional = true }
 serde_json = { version = "1.0", optional = true }
 
 [features]
 diagnostics = ["lsp-types"]
 payloads = ["serde_json"]
+test_filter = []
