--- a/bench/Cargo.toml
+++ b/bench/Cargo.toml
@@ -12,6 +12,7 @@ tracing-subscriber = "0.3"
 
 [dev-dependencies]
 criterion = { version = "0.5", features = ["html_reports"] }
+thiserror = "1.0"
 
 [[bench]]
 name = "bench"
