--- a/bench/Cargo.toml
+++ b/bench/Cargo.toml
@@ -9,11 +9,9 @@ edition = "2021"
 logid = { path = "../logid" }
 tracing = "0.1"
 tracing-subscriber = "0.3"
-
-[dev-dependencies]
 criterion = { version = "0.5", features = ["html_reports"] }
 thiserror = "1.0"
 
-[[bench]]
-name = "bench"
-harness = false
+#[[bench]]
+#name = "bench"
+#harness = false
