--- a/logid/Cargo.toml
+++ b/logid/Cargo.toml
@@ -14,6 +14,7 @@ categories = ["development-tools::debugging"]
 [dependencies]
 logid-core = { path = "../core", version = "0" }
 logid-derive = { path = "../derive", version = "0" }
+colored = "2"
 
 [features]
 diagnostics = ["logid-core/diagnostics"]
