--- a/logid/Cargo.toml
+++ b/logid/Cargo.toml
@@ -19,6 +19,8 @@ colored = "2"
 [features]
 diagnostics = ["logid-core/diagnostics"]
 payloads = ["logid-core/payloads"]
+log_debugs = ["logid-core/log_debugs"]
+log_traces = ["logid-core/log_traces"]
 
 [dev-dependencies]
 serde = { version = "1.0", features = ["derive"] }
