feat: move debug & trace events behind feature flags (#16)
* feat: move to evident 0.11.x

This wraps events in Arc<>, and passes Event to allow_event() for Filter.

* fix: remove vscode setting from git

* fix: prevent future vscode settings in git

* feat: move debug/trace log behind feature flags

* fix: enable debug/trace features for testing

* fix: enable benchmarks

* fix: remove local evident path

--- a/logid/Cargo.toml
+++ b/logid/Cargo.toml
@@ -19,9 +19,11 @@ colored = "2"
 [features]
 diagnostics = ["logid-core/diagnostics"]
 payloads = ["logid-core/payloads"]
+log_debugs = ["logid-core/log_debugs"]
+log_traces = ["logid-core/log_traces"]
 
 [dev-dependencies]
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 thiserror = "1.0"
-logid-core = { path = "../core", version = "0", features = ["test_filter"] }
+logid-core = { path = "../core", version = "0", features = ["log_debugs", "log_traces", "test_filter"] }
