--- a/core/Cargo.toml
+++ b/core/Cargo.toml
@@ -10,11 +10,13 @@ readme.workspace = true
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-evident = { version = "0.10" }
+evident = { version = "0.11" }
 lsp-types = { version = "0.94", optional = true }
 serde_json = { version = "1.0", optional = true }
 
 [features]
 diagnostics = ["lsp-types"]
 payloads = ["serde_json"]
+log_debugs = []
+log_traces = []
 test_filter = []
