--- a/bench/Cargo.toml
+++ b/bench/Cargo.toml
@@ -6,7 +6,7 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-logid = { path = "../logid", features = ["log_debugs"] }
+logid = { path = "../logid", features = ["log_debugs", "log_traces", "hint_note"] }
 tracing = "0.1"
 tracing-subscriber = "0.3"
 criterion = { version = "0.5", features = ["html_reports"] }
