feat: allow formatted log msgs (#25)
* feat: use new evident entry-filter and origin

* fix: replace either lcross or vbar on last line

* feat: use custom LogMsg instead of String

* fix: timing issue related to handler shutdown

* feat: add option to set formatted log msg

* feat: add fmt options for all addons

* fix: remove local evident path

--- a/core/Cargo.toml
+++ b/core/Cargo.toml
@@ -10,13 +10,14 @@ readme.workspace = true
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-evident = { version = "0.11" }
+evident = { version = "0.12" }
 lsp-types = { version = "0.94", optional = true }
 serde_json = { version = "1.0", optional = true }
 
 [features]
 diagnostics = ["lsp-types"]
 payloads = ["serde_json"]
+fmt = ["serde_json"]
 hint_note = []
 log_debugs = []
 log_traces = []
